# linux-download-manager

./: .gitignore  README.md  install.sh  uninstall.sh
browser/chromium/: content-script.js  content-style.css  manifest.json  native-host-manifest.json  service-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  browser.rs  commands.rs  jobs.rs  lib.rs  main.rs  platform.rs
src-tauri/src/download/: mod.rs
src-tauri/src/storage/: mod.rs
ui/: index.html  main.js  styles.css
