[package]
name = "linux-download-manager"
version = "0.1.0"
description = "Linux-first IDM-inspired download manager desktop app"
edition = "2024"
rust-version = "1.85"
build = "build.rs"
default-run = "linux-download-manager"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures-util = "0.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2.3.3"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
urlencoding = "2.1.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
